--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "types": "./lib/index.d.ts",
   "version": "5.5.0",
   "devDependencies": {
+    "@types/node": "^16.11.12",
     "typescript": "^4.5.3"
   }
 }
