--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@ledgerhq/hw-app-eth": "^6.18.0",
+    "@ledgerhq/hw-transport-node-hid": "^6.11.2",
     "ethers": "^5.5.2"
   },
   "description": "Hardware Wallet support for ethers (NodeJS only).",
