--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "version": "5.5.0",
   "devDependencies": {
     "@types/node": "^16.11.12",
+    "@types/node-hid": "^1.3.1",
     "typescript": "^4.5.3"
   }
 }
