fixed EIP1559 txs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,7 @@
                 "<node_internals>/**"
             ],
             "program": "${workspaceFolder}\\testTransact.js",
+            "console": "integratedTerminal"
         }
     ]
 }
