--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@anders-t/ethers-ledger",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Hardware Wallet support for ethers (NodeJS only).",
   "author": "Anders Torbjørnsen <anders.torbjornsen87@gmail.com>",
   "dependencies": {
@@ -16,7 +16,6 @@
   ],
   "license": "MIT",
   "main": "./lib/index.js",
-  "module": "./lib.esm/index.js",
   "publishConfig": {
     "access": "public"
   },
@@ -29,7 +28,7 @@
   },
   "homepage": "https://github.com/anders-torbjornsen/ethers-ledger",
   "scripts": {
-    "test": "exit 1"
+    "build": "tsc"
   },
   "sideEffects": false,
   "types": "./lib/index.d.ts",
@@ -37,5 +36,8 @@
     "@types/node": "^16.11.12",
     "@types/node-hid": "^1.3.1",
     "typescript": "^4.5.3"
-  }
+  },
+  "files": [
+    "lib/"
+  ]
 }
